--- a/header.html
+++ b/header.html
@@ -1,12 +1,12 @@
 <!-- Preloader Start -->
-<header>
+<header>S
   <!-- Header Start -->
   <div class="header-area">
       <div class="main-header ">
           <div class="header-top d-lg-block">
               <div class="container">
-                  <div class="row justify-content-end">
-                  <div class="col-xl-2 col-lg-2">
+                  <div class="row justify-content-center">
+                  <div class="col-xl-10 col-lg-10">
                      <!-- Logo -->
                        
                           <div class="logo">
