--- a/index.html
+++ b/index.html
@@ -491,17 +491,18 @@
                             <div class="form-group">
 
                                 <label for="contact_us_id">Name :</label>
-                                <input type="text" name="contact_us_name" id="contact_us_id" class="form-control txtbox" required>
+                                <input type="text" name="contact_us_name" id="contact_us_id" class="form-control txtbox"
+                                    required>
                                 <div class="invalid-feedback">Enter correct name</div>
 
                             </div>
-                             <label for="contact_us_id "> Email :</label>
-                                <input type="email" name="contact_us_email" id="contact_us_id"
-                                    class="form-control txtbox" required>
-                                    <div class="invalid-feedback">
-                                        Please provide a valid email.
-                                      </div>
-                          
+                            <label for="contact_us_id "> Email :</label>
+                            <input type="email" name="contact_us_email" id="contact_us_id" class="form-control txtbox"
+                                required>
+                            <div class="invalid-feedback">
+                                Please provide a valid email.
+                            </div>
+
                             <div class="form-group">
                                 <label>Phone :</label>
                                 <input type="text" name="contact_us_phone" id="contact_us_phone"
@@ -1324,19 +1325,22 @@
                     <div class="col-md-6">
                         <form name="contactForm" method="post" id="contactFormId" class="needs-validation">
 
-                        <h1> Please Contact Us For More Details :</h1>
-                        <label>Name :</label>
-                        <input type="text" name="contact_us_name" id="contact_us_id" class="form-control txtbox" required>
-                        <label> Email :</label>
-                        <input type="email" name="contact_us_email" id="contact_us_id" class="form-control txtbox" required>
-                        <label>Phone :</label>
-                        <input type="text" name="contact_us_phone" id="contact_us_phone" class="form-control txtbox" required>
-                        <label>Message :</label>
-                        <textarea name="contact_us_message" id="contact_us_message"
-                            class="form-control txtbox" required></textarea>
-                        <br />
-                        <input type="submit" value="Submit" class="ml-190 btn-success-custom">
-</form>
+                            <h1> Please Contact Us For More Details :</h1>
+                            <label>Name :</label>
+                            <input type="text" name="contact_us_name" id="contact_us_id" class="form-control txtbox"
+                                required>
+                            <label> Email :</label>
+                            <input type="email" name="contact_us_email" id="contact_us_id" class="form-control txtbox"
+                                required>
+                            <label>Phone :</label>
+                            <input type="text" name="contact_us_phone" id="contact_us_phone" class="form-control txtbox"
+                                required>
+                            <label>Message :</label>
+                            <textarea name="contact_us_message" id="contact_us_message" class="form-control txtbox"
+                                required></textarea>
+                            <br />
+                            <input type="submit" value="Submit" class="ml-190 btn-success-custom">
+                        </form>
                     </div>
 
                     <div class="col-md-3"></div>
@@ -2442,16 +2446,7 @@
         <!-- Want To work End 2-->
     </main>
     <div id="footer"></div>
-    <!--? Search model Begin -->
-    <div class="search-model-box">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-btn">+</div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Searching key.....">
-            </form>
-        </div>
-    </div>
-    <!-- Search model end -->
+    
     <!-- Scroll Up -->
     <div id="back-top">
         <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
