--- a/header.html
+++ b/header.html
@@ -5,8 +5,8 @@
       <div class="main-header ">
           <div class="header-top d-lg-block">
               <div class="container">
-                  <div class="row justify-content-center">
-                  <div class="col-xl-10 col-lg-10">
+                  <div class="row">
+                  <div class="col-xl-2 col-lg-2 align-self-center">
                      <!-- Logo -->
                        
                           <div class="logo">
