our clients and contact us images inserted

--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                 <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                     <div class="about-right-cap">
                         <div class="about-right-img">
-                            <img src="assets/img/trinity/Pic3.png" alt="">
+                            <img src="assets/img/trinity/Pic38.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                 <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                     <div class="about-right-cap">
                         <div class="about-right-img">
-                            <img src="assets/img/trinity/Pic3.png" alt="">
+                            <img src="assets/img/trinity/Pic39.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -237,7 +237,7 @@
                 <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                     <div class="about-right-cap">
                         <div class="about-right-img">
-                            <img src="assets/img/trinity/Pic3.png" alt="">
+                            <img src="assets/img/trinity/Pic40.png" alt="">
                         </div>
                     </div>
                 </div>
