--- a/header.html
+++ b/header.html
@@ -5,8 +5,11 @@
       <div class="main-header ">
           <div class="header-top d-lg-block">
               <div class="container">
-                  <div class="row">
-                  <div class="col-xl-2 col-lg-2 align-self-center">
+                  <div class="row align-items-center">
+                    <div class="col-xs-5"></div>
+                  <div class="col-xl-2 col-lg-2">
+                    <div class="col-xs-5"></div>
+
                      <!-- Logo -->
                        
                           <div class="logo">
