--- a/our-clients.html
+++ b/our-clients.html
@@ -95,7 +95,7 @@ for (var i = 0; i < titlearray.length; i++) {
 
         <section>
             <div class="container">
-                <div class="row p-4">
+                <div class="row p-4 justify-content-between">
                     <div class="col-md-2">
                         <img src="assets/img/trinity/Pic18.png" alt="" width="70%" height="auto">
                     </div>
@@ -109,12 +109,7 @@ for (var i = 0; i < titlearray.length; i++) {
                     <img src="assets/img/trinity/Pic18.png" alt="" width="70%" height="auto">
 
                 </div>
-                <div class="col-md-2">
-                    <img src="assets/img/trinity/Pic18.png" alt="" width="70%" height="auto">
-                </div>
-            <div class="col-md-2">
-                <img src="assets/img/trinity/Pic18.png" alt="" width="70%" height="auto">
-            </div>
+
                 </div>
             </div>
         </section>
