--- a/header.html
+++ b/header.html
@@ -6,9 +6,9 @@
           <div class="header-top d-lg-block">
               <div class="container">
                   <div class="row align-items-center">
-                    <div class="col-xs-5"></div>
+                    <div class="col-xs-5 col-lg-5"></div>
                   <div class="col-xl-2 col-lg-2">
-                    <div class="col-xs-5"></div>
+                    <div class="col-xs-5 "></div>
 
                      <!-- Logo -->
                        
