--- a/index.html
+++ b/index.html
@@ -36,6 +36,43 @@
 
 
         });
+
+        (function() {
+      'use strict';
+      window.addEventListener('load', function() {
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.getElementsByClassName('needs-validation');
+        var tel = document.querySelector('input[type="tel"]');
+        // check match
+
+        // Loop over them and prevent submission
+        var validation = Array.prototype.filter.call(forms, function(form) {
+          form.addEventListener('submit', function(event) {
+            if (form.checkValidity() === false) {
+              event.preventDefault();
+              event.stopPropagation();
+            }
+            var email = $("#email").val();
+            var confirmemail = $("#confirm_email").val();
+            if(email !== confirmemail){ 
+            form.classList.add('was-validated');
+              $("#validate").html("Email Should Match");
+              $("#validate").addClass("error");
+               $("#confirm_email").addClass("error-text");
+              event.preventDefault();
+              event.stopPropagation();              
+            }
+            else{
+            $("#validate").removeClass("error");
+            form.classList.add('was-validated');
+               $("#confirm_email").removeClass("error-text");
+              $("#validate").html("Looks Good!");
+            }
+           
+          }, false);
+        });
+      }, false);
+    })();
     </script>
 
 </head>
@@ -486,7 +523,7 @@
                 <div class="row">
                     <div class="col-md-3"></div>
                     <div class="col-md-6">
-                        <form name="contactForm" method="post" id="contactFormId" class="needs-validation">
+                        <form name="contactForm" method="post" id="contactFormId"  class="needs-validation" novalidate>
                             <h1> Please Contact Us For More Details :</h1>
                             <div class="form-group">
 
@@ -496,12 +533,12 @@
                                 <div class="invalid-feedback">Enter correct name</div>
 
                             </div>
-                            <label for="contact_us_id "> Email :</label>
-                            <input type="email" name="contact_us_email" id="contact_us_id" class="form-control txtbox"
-                                required>
-                            <div class="invalid-feedback">
-                                Please provide a valid email.
-                            </div>
+                            <div class="form-group">
+                            <label  for="validationCustom01"> Email :</label>
+                            <input type="Email" class="form-control txtbox" id="email" 
+                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                            <div class="invalid-feedback">Enter correct mail ID</div>
+                        </div>
 
                             <div class="form-group">
                                 <label>Phone :</label>
