--- a/contact.html
+++ b/contact.html
@@ -35,83 +35,6 @@
         });
     </script>
 </head>
-<!-- <header>
-    <div class="header-area">
-        <div class="main-header ">
-            <div class="header-top d-none d-lg-block">
-                <div class="container">
-                    <div class="col-xl-12">
-                        <div class="row d-flex justify-content-between align-items-center">
-                            <div class="header-info-left">
-                                <ul>
-                                    <li><i class="fas fa-phone"></i> +880 278 367 367</li>
-                                    <li><i class="far fa-envelope"></i>brexitsupport@gmail.com</li>
-                                </ul>
-                            </div>
-                            <div class="header-info-right">
-                                <a href="#" class="btn">Free Quote <i class="ti-arrow-right"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="header-bottom  header-sticky">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-xl-2 col-lg-2">
-                            <div class="logo">
-                                <a href="index.html"><img class="trinity_logo" src="assets/img/logo/trinity_logo.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-xl-9 col-lg-8">
-                            <div class="menu-wrapper  d-flex align-items-center">
-                                <div class="main-menu d-none d-lg-block">
-                                    <nav>
-                                        <ul id="navigation">
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">About</a></li>
-                                            <li><a href="services.html">Services</a></li>
-                                            <li><a href="project.html">Project</a></li>
-                                            <li><a href="blog.html">Blog</a>
-                                                <ul class="submenu">
-                                                    <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="blog_details.html">Blog Details</a></li>
-                                                    <li><a href="elements.html">Element</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">Pages</a>
-                                                <ul class="submenu">
-                                                    <li><a href="project_details.html">Project Details</a></li>
-                                                    <li><a href="services_details.html">Services Details</a></li>
-                                                    <li><a href="elements.html">Element</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="active"><a href="contact.html">Contact</a></li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-1 col-lg-2">
-                            <div class="search d-none d-lg-block">
-                                <ul>
-                                    <li>
-                                        <div class="nav-search search-switch">
-                                            <span class="fas fa-search"></span>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="mobile_menu d-block d-lg-none"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</header> -->
 <div id="header"></div>
 <main>
 
@@ -125,7 +48,7 @@
                     <div class="row mb-4">
                         <div class="col-xs-12 col-lg-12 col-md-10">
                            
-                                <h1 class="display-4 white-text">
+                                <h1 class=" white-text heading-custom">
                                     Contact Us For <br/>More Information
                                 </h1>                    
                         </div>
