--- a/header.html
+++ b/header.html
@@ -53,7 +53,7 @@
             <a class="nav-link" href="services.html">Our Services</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="project.html">Required Documents</a>
+            <a class="nav-link" href="index.html">Required Documents</a>
           </li>
           <li class="nav-item px-4">
             <a class="nav-link" href="blog.html">Trinity Training</a>
