--- a/index.html
+++ b/index.html
@@ -37,42 +37,75 @@
 
         });
 
-        (function() {
-      'use strict';
-      window.addEventListener('load', function() {
-        // Fetch all the forms we want to apply custom Bootstrap validation styles to
-        var forms = document.getElementsByClassName('needs-validation');
-        var tel = document.querySelector('input[type="tel"]');
-        // check match
+        (function () {
+            'use strict';
+            window.addEventListener('load', function () {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                var tel = document.querySelector('input[type="tel"]');
+                // check match
 
-        // Loop over them and prevent submission
-        var validation = Array.prototype.filter.call(forms, function(form) {
-          form.addEventListener('submit', function(event) {
-            if (form.checkValidity() === false) {
-              event.preventDefault();
-              event.stopPropagation();
-            }
-            var email = $("#email").val();
-            var confirmemail = $("#confirm_email").val();
-            if(email !== confirmemail){ 
-            form.classList.add('was-validated');
-              $("#validate").html("Email Should Match");
-              $("#validate").addClass("error");
-               $("#confirm_email").addClass("error-text");
-              event.preventDefault();
-              event.stopPropagation();              
-            }
-            else{
-            $("#validate").removeClass("error");
-            form.classList.add('was-validated');
-               $("#confirm_email").removeClass("error-text");
-              $("#validate").html("Looks Good!");
-            }
-           
-          }, false);
-        });
-      }, false);
-    })();
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        var email = $("#email").val();
+                        var confirmemail = $("#confirm_email").val();
+                        if (email !== confirmemail) {
+                            form.classList.add('was-validated');
+                            $("#validate").html("Email Should Match");
+                            $("#validate").addClass("error");
+                            $("#confirm_email").addClass("error-text");
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        else {
+                            $("#validate").removeClass("error");
+                            form.classList.add('was-validated');
+                            $("#confirm_email").removeClass("error-text");
+                            $("#validate").html("Looks Good!");
+                        }
+
+                    }, false);
+                });
+            }, false);
+        })();
+
+        (function () {
+            'use strict';
+            window.addEventListener('load', function () {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                var tel = document.querySelector('input[type="tel"]');
+
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        if (!check(tel.value)) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                            alert('error on phone')
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+
+
+        })();
+
+        function check(input) {
+            if (input.length != 10)
+                return false;
+            return true;
+        }
     </script>
 
 </head>
@@ -88,7 +121,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic1new.png" alt="">
+                                <img src="assets/img/trinity/Pic1new.png" alt="" class="img-fluid">
                             </div>
 
                         </div>
@@ -127,13 +160,13 @@
             </div>
         </section>
 
-        <section class="about-low-area section-padding40">
+        <section>
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic2.png" alt="">
+                                <img src="assets/img/trinity/Pic2.png" alt="" class="img-fluid">
                             </div>
                             <!--  <div class="img-cap">
                                 <span>20</span>
@@ -196,7 +229,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic5.png" alt="">
+                                <img src="assets/img/trinity/Pic5.png" alt="" class="img-fluid">
                             </div>
                             <!-- <div class="img-cap">c
                                     <span>20</span>
@@ -260,7 +293,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic4.png" alt="">
+                                <img src="assets/img/trinity/Pic4.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -486,7 +519,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic3.png" alt="">
+                                <img src="assets/img/trinity/Pic3.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -523,7 +556,7 @@
                 <div class="row">
                     <div class="col-md-3"></div>
                     <div class="col-md-6">
-                        <form name="contactForm" method="post" id="contactFormId"  class="needs-validation" novalidate>
+                        <form name="contactForm" method="post" id="contactFormId" class="needs-validation" novalidate>
                             <h1> Please Contact Us For More Details :</h1>
                             <div class="form-group">
 
@@ -534,11 +567,11 @@
 
                             </div>
                             <div class="form-group">
-                            <label  for="validationCustom01"> Email :</label>
-                            <input type="Email" class="form-control txtbox" id="email" 
-                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
-                            <div class="invalid-feedback">Enter correct mail ID</div>
-                        </div>
+                                <label for="validationCustom01"> Email :</label>
+                                <input type="Email" class="form-control txtbox" id="email"
+                                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                                <div class="invalid-feedback">Enter correct mail ID</div>
+                            </div>
 
                             <div class="form-group">
                                 <label>Phone :</label>
@@ -610,7 +643,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic8.png" alt="">
+                                <img src="assets/img/trinity/Pic8.png" alt="" class="img-fluid">
                             </div>
                             <!--  <div class="img-cap">
                             <span>20</span>
@@ -822,7 +855,7 @@
                                 <div class="col-md-4">
                                     <div class="card border-0 text-center">
                                         <div class="card-body">
-                                            <img src="assets/img/trinity/Customer.png" alt="" width="25%" height="auto">
+                                            <img src="assets/img/trinity/Customer.png" alt="" width="25%" height="auto" class="img-fluid">
                                             <h2 class="card-title">
                                                 Unique Benefits</h2>
                                             <p class="card-text text-rght">There is a possibility for GeM registration
@@ -849,7 +882,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic10.png" alt="">
+                                <img src="assets/img/trinity/Pic10.png" alt="" class="img-fluid">
                             </div>
                             <!--  <div class="img-cap">
                             <span>20</span>
@@ -998,7 +1031,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic9.png" alt="">
+                                <img src="assets/img/trinity/Pic9.png" alt="" class="img-fluid">
                             </div>
                             <!-- <div class="img-cap">c
                                     <span>20</span>
@@ -1096,7 +1129,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="text-center">
-                                <img src="assets/img/trinity/Pic6.png" alt="" width="60%" height="auto">
+                                <img src="assets/img/trinity/Pic6.png" alt="" width="60%" height="auto" class="img-fluid">
                             </div>
                         </div>
                         <div class="row pt-4">
@@ -1117,7 +1150,7 @@
                     <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div>
-                                <img src="assets/img/trinity/Pic11.png" alt="">
+                                <img src="assets/img/trinity/Pic11.png" alt="" class="img-fluid">
                             </div>
 
                         </div>
@@ -1175,7 +1208,7 @@
                     <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div>
-                                <img src="assets/img/trinity/Pic12.png" alt="">
+                                <img src="assets/img/trinity/Pic12.png" alt="" class="img-fluid">
                             </div>
 
                         </div>
@@ -1331,7 +1364,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic13.png" alt="">
+                                <img src="assets/img/trinity/Pic13.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -1493,7 +1526,7 @@
                     <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div>
-                                <img src="assets/img/trinity/Pic14.png" alt="">
+                                <img src="assets/img/trinity/Pic14.png" alt="" class="img-fluid">
                             </div>
 
                         </div>
@@ -1535,7 +1568,7 @@
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="about-right-img">
-                                <img src="assets/img/trinity/Pic15.png" alt="">
+                                <img src="assets/img/trinity/Pic15.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -1566,10 +1599,10 @@
 
                 <div class="carousel-item active">
                     <div class="row justify-content-center">
-                        <div class="col-md-4"> <img src="assets/img/trinity/Pic18.png" class="d-block w-100" alt=""
+                        <div class="col-md-4"> <img src="assets/img/trinity/Pic18.png" class="d-block w-100 img-fluid" alt=""
                                 width="50%" height="auto">
                         </div>
-                        <div class="col-md-4"> <img src="assets/img/trinity/Pic19.png" class="d-block w-100" alt=""
+                        <div class="col-md-4"> <img src="assets/img/trinity/Pic19.png" class="d-block w-100 img-fluid" alt=""
                                 width="50%" height="auto">
                         </div>
                     </div>
@@ -1641,7 +1674,7 @@
 
     </main>
     <div id="footer"></div>
-    
+
     <!-- Scroll Up -->
     <div id="back-top">
         <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
