--- a/index.html
+++ b/index.html
@@ -447,12 +447,12 @@
         </section>
 
 
-        <section class="about-low-area section-padding40 section-padding-5">
+        <section class="about-low-area section-padding40">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
                         <div class="section-title mb-35">
-                            <h2 class="text-center font-20" data-animation="fadeInRight" data-delay="3s">Facing Issue With Tax
+                            <h2 class="text-center" data-animation="fadeInRight" data-delay="3s">Facing Issue With Tax
                                 Assessment On Trinity Balaji Registration?
 
                             </h2>
