--- a/index.html
+++ b/index.html
@@ -118,13 +118,9 @@
         <section class="p-zero">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
-                        <div class="about-right-cap">
-                            <div class="about-right-img">
+                    <div class="col-xl-4 col-lg-6 col-md-9">
                                 <img src="assets/img/trinity/Pic1new.png" alt="" class="img-fluid">
-                            </div>
 
-                        </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-10">
                         <div class="slider-area position-relative">
