index and our products page made responsive

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Trinity Balaji</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1 , maximum-scale=1, user-scalable=no"">
+    <meta name="viewport" content="width=device-width, initial-scale=1 , maximum-scale=1, user-scalable=no">
     
     <link rel="manifest" href="site.webmanifest">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
@@ -433,10 +433,6 @@
                             <div class="about-right-img">
                                 <img src="assets/img/trinity/Pic8.png" alt="" class="img-fluid">
                             </div>
-                            <!--  <div class="img-cap">
-                            <span>20</span>
-                            <p>Years of experience</p>
-                        </div> -->
                         </div>
                     </div>
                 </div>
@@ -536,8 +532,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
                         <div class="section-title mb-35">
-                            <h1 class="text-center">Are You Stuck With Vendor Assessment?
-
+                            <h1 class="text-center font-lg">
+                                Are You Stuck With Vendor Assessment?
                             </h1>
                         </div>
                     </div>
@@ -564,7 +560,7 @@
                                 Experience With GeM Portal
                             </p>
                             <div class="row">
-                                <div class="col text-center">
+                                <div class="col text-center ">
                                     <button type="button" class=" btn-success-custom">Activate My OEM Panel</button>
                                 </div>
                             </div>
@@ -614,7 +610,7 @@
                                 <div class="col-md-4">
                                     <div class="card border-0 text-center">
                                         <div class="card-body">
-                                            <i class="fa fa-link fa-5x" aria-hidden="true"></i>
+                                            <i class="fa fa-link fa-5x fa-3em" aria-hidden="true"></i>
                                             <br /><br />
                                             <h2 class="card-title">
                                                 Trade Assistance</h2>
@@ -629,7 +625,7 @@
                                 <div class="col-md-4">
                                     <div class="card border-0 text-center">
                                         <div class="card-body">
-                                            <i class="fa fa-rocket fa-5x" aria-hidden="true"></i>
+                                            <i class="fa fa-rocket fa-5x fa-3em" aria-hidden="true"></i>
                                             <br /><br />
                                             <h2 class="card-title">
                                                 Less Administrative Work</h2>
@@ -643,7 +639,7 @@
                                 <div class="col-md-4">
                                     <div class="card border-0 text-center">
                                         <div class="card-body">
-                                            <img src="assets/img/trinity/Customer.png" alt="" width="25%" height="auto" class="img-fluid">
+                                            <img src="assets/img/trinity/Customer.png" alt="" class="width-30">
                                             <h2 class="card-title">
                                                 Unique Benefits</h2>
                                             <p class="card-text text-rght">There is a possibility for GeM registration
@@ -788,7 +784,7 @@
             </div>
         </section>
 
-        <section class="about-low-area section-padding40">
+        <section class="pt-3 about-low-area section-padding40">
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-xl-6 col-lg-6 col-md-10">
@@ -894,7 +890,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-10">
                         <div class="card border-0">
                             <div class="card-body">
-                                <h2 class="card-title"><i class="fas fa-star"></i>
+                                <h2 class="card-title font-17"><i class="fas fa-star"></i>
                                     Resell On Trinity Balaji
                                 </h2>
                                 <p class="card-text text-rght">We can make you a reseller on gem portal in just Few
@@ -905,7 +901,7 @@
                         </div>
                         <div class="card border-0">
                             <div class="card-body">
-                                <h2 class="card-title">
+                                <h2 class="card-title font-17">
                                     <i class="fas fa-star"></i>
                                     Become OEM On Trinity Balaji
                                 </h2>
@@ -928,7 +924,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>  
 
 
 
@@ -1061,7 +1057,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
                         <div class="section-tittle mb-35">
-                            <h2 class="text-center display-3">WHAT WE HAVE DONE TILL NOW IN NUMBERS
+                            <h2 class="text-center display-3 font-17">WHAT WE HAVE DONE TILL NOW IN NUMBERS
                             </h2>
                         </div>
                     </div>
@@ -1069,7 +1065,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-12 col-lg-12 col-md-10">
                         <div class="about-caption mb-50">
-                            <div class="row">
+                            <div class="row p-4">
                                 <div class="col-md-4">
                                     <div class="card text-center">
                                         <div class="card-body">
@@ -1098,7 +1094,7 @@
                                         <div class="card-body">
 
                                             <h1 class="card-title xl-font-custom">
-                                                100
+                                                 100
                                             </h1>
                                             <h2 class="h2">Per Day Orders</h2>
                                         </div>
@@ -1240,18 +1236,18 @@
                     </div>
                 </div>
                 <div class="row justify-content-between mb-30">
-                    <div class="col-md-6">
+                    <div class="col-md-6 ">
                         <div class="card border-0">
                             <div class="card-body">
-                                <h2 class="card-title display-6"><i class="fas fa-thumbs-up yellowiconcolor fa-2x"></i>
+                                <h2 class="card-title font-20"><i class="fas fa-thumbs-up yellowiconcolor fa-2x"></i>
                                     Assured Customer Satisfaction</h2>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 text-right">
+                    <div class="col-md-6 align-left-xs">
                         <div class="card border-0">
                             <div class="card-body">
-                                <h2 class="card-title display-6"><i class="fas fa-lock yellowiconcolor fa-2x"></i>
+                                <h2 class="card-title font-20"><i class="fas fa-lock yellowiconcolor fa-2x"></i>
                                     Client Data Confidentiality</h2>
                             </div>
                         </div>
@@ -1261,17 +1257,17 @@
                     <div class="col-md-6">
                         <div class="card border-0">
                             <div class="card-body">
-                                <h2 class="card-title display-6"><i
+                                <h2 class="card-title font-20"><i
                                         class="far fa-money-bill-alt yellowiconcolor fa-2x"></i>
                                     No Hidden Charges</h2>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-md-6 text-right">
+                    <div class="col-md-6 align-left-xs">
                         <div class="card border-0">
                             <div class="card-body">
-                                <h2 class="card-title display-6"><i class="fas fa-laptop yellowiconcolor fa-2x"></i>
+                                <h2 class="card-title font-20"><i class="fas fa-laptop yellowiconcolor fa-2x"></i>
                                     Secured Online Payments</h2>
                             </div>
                         </div>
@@ -1364,7 +1360,8 @@
             </div>
         </section>
 
-
+<section>
+    <div class="container">
         <div class="row justify-content-center">
             <div class="col-xs-12 col-lg-12 col-md-10">
                 <div class="section-title mb-35">
@@ -1376,21 +1373,21 @@
         </div>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+             <!--    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
                     aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+                    aria-label="Slide 3"></button> -->
             </div>
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
                     <div class="row justify-content-center">
-                        <div class="col-md-4"> <img src="assets/img/trinity/Pic18.png" class="d-block w-100 img-fluid" alt=""
+                        <div class="col-md-4"> <img src="assets/img/trinity/Pic18.png" class="d-block img-fluid" alt=""
                                 width="50%" height="auto">
                         </div>
-                        <div class="col-md-4"> <img src="assets/img/trinity/Pic19.png" class="d-block w-100 img-fluid" alt=""
+                        <div class="col-md-4"> <img src="assets/img/trinity/Pic19.png" class="d-block  img-fluid" alt=""
                                 width="50%" height="auto">
                         </div>
                     </div>
@@ -1403,18 +1400,9 @@
                 <img src="assets/img/trinity/certificate.jpg" class="d-block w-100" alt="" width="50%" height="auto">
               </div> -->
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
-
+    </div>
+</section>
 
         <section class="about-low-area section-padding40 mt-20">
             <div class="container">
@@ -1430,7 +1418,7 @@
                 </div>
 
                 <div class="row justify-content-center">
-                    <div class="col-md-2">
+                    <div class="col-md-2 col-xs-4">
                         <div class="card text-center p-4">
                             <div class="card-body">
                                 <i class="fab fa-facebook-f fa-3x"></i>
@@ -1438,14 +1426,14 @@
                         </div>
                     </div>
 
-                    <div class="col-md-2">
+                    <div class="col-md-2 col-xs-4">
                         <div class="card text-center p-4">
                             <div class="card-body">
                                 <i class="fab fa-twitter fa-3x"></i>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 col-xs-4">
                         <div class="card text-center p-4">
                             <div class="card-body">
                                 <i class="fab fa-linkedin fa-3x" aria-hidden="true"></i>
