--- a/about.html
+++ b/about.html
@@ -75,14 +75,14 @@
                                     <div class="card ">
                                         <ul class="list-group">
                                             <li
-                                                class="list-group-item m-5 text-center border-0 orangetextcolor display-4 font-weight-bold">
+                                                class="list-group-item card-custom-xs-2 display-4">
                                                 1180/- Only</li>
-                                            <li class="list-group-item pb-5 pt-5 text-center border-0 orangebgcolor">
+                                            <li class="list-group-item card-custom-xs">
                                                 CONSULTANCY PLAN</li>
-                                            <li class="list-group-item m-5 text-center border-0">Basic Consultancy Plan
+                                            <li class="list-group-item card-custom-xs-3">Basic Consultancy Plan
                                             </li>
                                         </ul>
-                                        <div class="row">
+                                        <div class="row pb-15">
                                             <div class="col text-center">
                                                 <button type="button" class="orange-btn">Call Us Now</button>
                                             </div>
@@ -95,11 +95,11 @@
                                     <div class="card ">
                                         <ul class="list-group">
                                             <li
-                                                class="list-group-item m-5 text-center border-0 bluetextcolor display-4 font-weight-bold">
+                                                class="list-group-item card-custom-blue display-4">
                                                 999/- Only</li>
-                                            <li class="list-group-item pb-5 pt-5 text-center border-0 bluebgcolor">BASIC
+                                            <li class="list-group-item card-custom-blue2">BASIC
                                                 STEP</li>
-                                            <li class="list-group-item m-5 text-center border-0">
+                                            <li class="list-group-item m-4 text-center border-0">
                                                 <ul>
                                                     <li><i class="fas fa-check bluetextcolor"></i> You Will Be
                                                         Registered On The GeM Portal.</li>
@@ -108,7 +108,7 @@
                                                 </ul>
                                             </li>
                                         </ul>
-                                        <div class="row">
+                                        <div class="row pb-15">
                                             <div class="col text-center">
                                                 <button type="button" class="blue-btn">Call Us Now</button>
                                             </div>
@@ -132,7 +132,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xs-12 col-lg-12 col-md-10">
                         <div class="section-title mb-35">
-                            <h1 class="text-center" data-animation="fadeInRight" data-delay="3s">
+                            <h1 class="text-center font-15" data-animation="fadeInRight" data-delay="3s">
                                 Original Equipments Manufacturer Pack (OEM Pack)
                             </h1>
                         </div>
@@ -142,61 +142,63 @@
                     <div class="col-xl-5 col-lg-6 col-md-10">
                         <div class="card border-0">
                             <div class="card-body">
-                                <h2 class="card-title"><i class="fas fa-star"></i>
+                                <h2 class="card-title font-15"><i class="fas fa-star"></i>
                                     REGISTRATION ON GEM PORTAL</h2>
-                                <p class="card-text text-rght">We will register your company on gem portal.</p>
+                                <p class="card-text text-rght font-14">We will register your company on gem portal.</p>
                             </div>
                         </div>
                         <div class="card border-0">
                             <div class="card-body">
-                                <h2 class="card-title">
+                                <h2 class="card-title font-15">
                                     <i class="fas fa-star"></i>
                                     ACTIVATION OF YOUR OEM PANEL
                                 </h2>
-                                <p class="card-text">We will activate your OEM panel.</p>
+                                <p class="card-text font-14">We will activate your OEM panel.</p>
                             </div>
                         </div>
                         <div class="card border-0">
                             <div class="card-body">
-                                <h2 class="card-title">
+                                <h2 class="card-title font-15">
                                     <i class="fas fa-star"></i>
                                     SELL WITH YOUR BRAND NAME
                                 </h2>
-                                <p class="card-text">we will upload your 1 product with your brand name.</p>
+                                <p class="card-text font-14">we will upload your 1 product with your brand name.</p>
                             </div>
                         </div>
                         <div class="card border-0">
                             <div class="card-body">
-                                <h2 class="card-title">
+                                <h2 class="card-title font-15">
                                     <i class="fas fa-star"></i>
                                     BRAND APPROVAL
                                 </h2>
-                                <p class="card-text">We will approve your brand name on gem</p>
+                                <p class="card-text font-14">We will approve your brand name on gem</p>
                             </div>
                         </div>
                         <div class="card border-0">
                             <div class="card-body">
-                                <h2 class="card-title">
+                                <h2 class="card-title font-15">
                                     <i class="fas fa-star"></i>
                                     WEBSITE IS REQUIRED
                                 </h2>
-                                <p class="card-text">If you don't have a website we can provide you one for brand
+                                <p class="card-text font-14">If you don't have a website we can provide you one for brand
                                     approval.</p>
                             </div>
                         </div>
+
+                           
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
                             <div class="card ">
-                                <ul class="list-group">
+                                <ul class="list-group card-darkblue">
                                     <li
-                                        class="list-group-item m-5 text-center border-0 darkbluetextcolor display-4 font-weight-bold">
+                                        class="list-group-item darkbluetextcolor display-4 card-darkblue">
                                         Call Now</li>
-                                    <li class="list-group-item pb-5 pt-5 text-center border-0 darkbluebgcolor">BASIC
+                                    <li class="list-group-item text-center border-0 darkbluebgcolor">BASIC
                                         STEP</li>
                                     <li class="list-group-item p-5 m-5">
-                                        <ul>
-                                            <li><i class="fas fa-check bluetextcolor"></i> Register On GeM</li>
+                                        <ul class=" font-15 text-left  basic-step">
+                                            <li><i class="fas fa-check bluetextcolor font-15"></i> Register On GeM</li>
                                             <li><i class="fas fa-check bluetextcolor"></i> Activation Of OEM Panel</li>
                                             <li><i class="fas fa-check bluetextcolor"></i> Product Upload With Your Brand Name
                                             </li>
