our services page made responsive

--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
 
 
 
-        <div class="row p-5">
+        <div class="row pc-5">
             <div class="col-md-4">
                 <div class="card border-0 text-center">
                     <div class="card-body">
@@ -114,7 +114,7 @@
             </div>
         </div>
 
-        <div class="row p-5">
+        <div class="row pc-5">
             <div class="col-md-4">
                 <div class="card border-0 text-center">
                     <div class="card-body">
@@ -152,7 +152,7 @@
 
 
         <section class="about-low-area">
-
+<div class="container">
             <div class="row ">
                 <div class="col-xl-5 col-lg-5 col-md-9 offset-md-1 offset-sm-1">
                     <div class="about-right-cap">
@@ -173,8 +173,8 @@
                     <div class="about-caption ">
                         <div class="row">
                             <div class="col-xs-12 col-lg-12 col-md-10">
-                                <div>
-                                    <h4 id="firstToggle" onclick="showhide(mydiv)" class="mb-35 font-25">How To Get GeM Registration?  <i class="fas fa-chevron-down"></i></h4>
+                                <div class="mb-35">
+                                    <h4 id="firstToggle" onclick="showhide(mydiv)" class="mb-35 pbc-25 font-25 font-17">How To Get GeM Registration?  <i class="fas fa-chevron-down"></i></h4>
                                     <div id="firstShow" class="custom-hidden card pl-4">
                                         <p>
                                         <h4>In order to obtain GeM Registration you must have following below documents
@@ -198,7 +198,7 @@
                                             under the GeM portal.</h4>
                                         </p>
                                     </div>
-                                    <h4 id="secondToggle" onclick="showhide(mydiv)" class="mb-35 font-25">Why Product Listing On GeM Is
+                                    <h4 id="secondToggle" onclick="showhide(mydiv)" class="pbc-25 mb-35 font-25 font-17">Why Product Listing On GeM Is
                                         Important?<i class="fas fa-chevron-down"></i></h4>
                                     <div id="secondShow" class="custom-hidden card p-4">
                                         <p>
@@ -214,13 +214,13 @@
                                             Our professionals can help you list your products and services properly.
                                         </p>
                                     </div>
-                                    <h4 id="thirdToggle" onclick="showhide(mydiv)" class="mb-35 font-25">Objective Of GeM Registration? <i class="fas fa-chevron-down"></i></h4>
-                                    <div id="thirdShow" class="custom-hidden p-4">
+                                    <h4 id="thirdToggle" onclick="showhide(mydiv)" class="pbc-25 mb-35 font-25 font-17">Objective Of GeM Registration? <i class="fas fa-chevron-down"></i></h4>
+                                    <div id="thirdShow" class="custom-hidden card p-4">
                                         <p>The purpose of getting a GeM registration is to ensure a smooth and effective
                                             procurement process for government offices requirement. Increase the
                                             transparency between private sellers and government buyers.</p>
                                     </div>
-                                    <h4 id="forthToggle" onclick="showhide(mydiv)" class="mb-35 display-5 font-25">Who is a Primary Buyer on GeM? <i class="fas fa-chevron-down"></i></h4>
+                                    <h4 id="forthToggle" onclick="showhide(mydiv)" class="pbc-25 mb-35 display-5 font-25 font-17">Who is a Primary Buyer on GeM? <i class="fas fa-chevron-down"></i></h4>
                                     <div id="forthShow" class="custom-hidden card p-4">
 
                                         <p>
@@ -246,6 +246,7 @@
                     </div>
                 </div>
             </div>
+        </div>
             </section>
 
 
@@ -255,7 +256,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                         <div class="about-right-cap">
-                            <div class="about-right-img">
+                            <div class="about-right-img text-center">
                                 <img src="assets/img/trinity/Pic17.png" alt="" style="width: 70%; height: auto;">
                             </div>
                         </div>
