trinity training our-clients contact-us page made responsive

--- a/our-clients.html
+++ b/our-clients.html
@@ -77,7 +77,7 @@ for (var i = 0; i < titlearray.length; i++) {
                             <div class="row justify-content-center">
                                 <div class="col-xs-12 col-lg-12 col-md-10">
                                     <div>
-                                        <p class="display-1 font-weight-bold">
+                                        <p class="display-01 b font-35">
                                             Our Clients
                                         </p>
                                     </div>
