--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                     <div class="row mb-4">
                         <div class="col-xs-12 col-lg-12 col-md-10">
                            
-                                <h1 class=" white-text heading-custom">
+                                <h1 class=" white-text heading-custom font-35">
                                     Contact Us For <br/>More Information
                                 </h1>                    
                         </div>
@@ -56,15 +56,17 @@
                     <p class="white-text">
                         We are the best consultancy company for gem portal. Our experts will guide and provide you the best training for the gem portal. Contact us for more information we are always ready to answer all your queries.
                     </p>
+                    <div class="container">
                     <i class="fab fa-facebook-f iconWrapper-blue"></i>
                     <i class="fab fa-twitter iconWrapper-blue"></i>
                     <i class="fab fa-google-plus-g iconWrapper-blue"></i> 
                     <i class="fab fa-linkedin-in iconWrapper-blue"></i>    
                     <i class="fab fa-instagram iconWrapper-blue"></i>
                 </div>
+                </div>
                 <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                     <div class="about-right-cap">
-                        <div class="about-right-img">
+                        <div class="about-right-img text-center">
                             <img src="assets/img/trinity/Pic38.png" alt="">
                         </div>
                     </div>
@@ -80,12 +82,12 @@
     <section class="about-low-area section-padding40">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6 col-lg-6 col-md-10 pl-30 align-self-center">
-                    <div class="card p-5 card-rounded">
+                <div class="col-xl-6  pt-3 pb-3  col-lg-6 col-md-10 pl-30 align-self-center">
+                    <div class="card pc-5 card-rounded">
                         <div class="card-body">
 
                             <i class="fas fa-laptop fa-3x lightorangeicon mb-2"></i>
-                            <h2 class="card-title">
+                            <h2 class="card-title font-25">
                                 For Any Queries
 
                             </h2>
@@ -96,11 +98,12 @@
                         </div>
                     </div>
                  </div>
-                 <div class="col-xl-6 col-lg-6 col-md-10 pl-30 align-self-center">
-                    <div class="card p-5 card-rounded">
+                 <div class="col-xl-6  pt-3 pb-3 col-lg-6 col-md-10 pl-30 align-self-center">
+                    <div class="card  card-rounded">
                         <div class="card-body">
 
-                            <i class="far fa-check-circle fa-3x lightorangeicon mb-2"></i>                            <h2 class="card-title">
+                            <i class="far fa-check-circle fa-3x lightorangeicon mb-2"></i>                         
+                               <h2 class="card-title font-25">
                                 Training Sessions Enquiry
 
                             </h2>
@@ -123,7 +126,7 @@
                 <div class="col-xl-6 col-lg-6 col-md-10">
                         <div class="row justify-content-center">
                             <div class="col-xs-12 col-lg-12 col-md-10">
-                                    <h1 class="font-weight-bold">
+                                    <h1 class="font-weight-bold font-35">
                                         Registered & Located In
                                     </h1>
                             </div>
@@ -156,7 +159,7 @@
 
     <section class="about-low-area section-padding40">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-center mb-4">
                 <div class="col-xl-5 col-lg-6 col-md-9 offset-md-1 offset-sm-1">
                     <div class="about-right-cap">
                         <div class="about-right-img">
@@ -167,7 +170,7 @@
                 <div class="col-xl-6 col-lg-6 col-md-10">
                         <div class="row justify-content-center">
                             <div class="col-xs-12 col-lg-12 col-md-10">
-                                    <h1 class="font-weight-bold">
+                                    <h1 class="font-weight-bold font-35">
                                         Feel Free To Contact Us.
                                     </h1>
                             </div>
