our products cards are now in level

--- a/about.html
+++ b/about.html
@@ -256,13 +256,13 @@
             <div class="row">
 
                 <div class="col-md-4">
-                    <a href="#">TERMS & CONDITIONS</a>
+                    <a href="terms.html">TERMS & CONDITIONS</a>
                 </div>
                 <div class="col-md-4">
-                    <a href=#>PRIVACY POLICY</a>
+                    <a href="privacy.html">PRIVACY POLICY</a>
                 </div>
                 <div class="col-md-4">
-                    <a href="#">REFUND POLICY</a>
+                    <a href="refund.html">REFUND POLICY</a>
                 </div>
             </div>
         </div> 
