--- a/index.html
+++ b/index.html
@@ -118,23 +118,22 @@
 
         <section class="p-zero">
             <div class="container">
-                <div class="row">
-                    <div class="col-xl-4 col-lg-6 col-md-9">
+                <div class="row justify-content-between ">
+                    <div class="col-xl-4 col-lg-6 col-md-6">
                                 <img src="assets/img/trinity/Pic1new.png" alt="" class="img-fluid">
 
                     </div>
-                    <div class="col-xl-6 col-lg-6 col-md-10">
-                        <div class="slider-area position-relative">
+                    <div class="col-xl-6 col-lg-6 col-md-6 align-self-center" >
+                        <div class="slider-area">
                             <div class="slider-active">
                                 <!-- Single Slider -->
-                                <div class="single-slider slider-height d-flex">
+                                <div class="single-slider slider-height slider-height">
                                     <div class="container">
 
                                         <div class="hero__caption">
                                             <h2 data-animation="fadeInUp" data-delay="2s" class="title_name">Trinity
                                                 Balaji</h2>
-
-                                            <h1 data-animation="fadeInLeft" data-delay="3s">Become A <span>Registered
+                                            <h1 data-animation="fadeInLeft" data-delay="3s" >Become A <span>Registered
                                                     Seller</span></h1>
                                             <p data-animation="fadeInLeft" data-delay="3s">On Government e-Marketplace
                                             </p>
@@ -172,9 +171,9 @@
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-10">
-                        <div class="about-caption mb-50">
+                        <div class="about-caption">
                             <!-- Section Tittle -->
-                            <div class="section-tittle mb-35">
+                            <div class="section-tittle">
                                 <span class="element">About Us</span>
                                 <h2>Why Choose Us As Your Trinity Balaji, Not Others?</h2>
                             </div>
@@ -197,9 +196,9 @@
                 <div class="row justify-content-between">
 
                     <div class="col-xl-6 col-lg-6 col-md-10">
-                        <div class="about-caption mb-50">
+                        <div class="about-caption">
                             <!-- Section Tittle -->
-                            <div class="section-tittle mb-35">
+                            <div class="section-tittle ">
 
                                 <h2>Get The Best Consultation, Services & Training For Government e-Marketplace In All
                                     Over India.Get The Best Consultation, Services & Training For Government
