--- a/privacy.html
+++ b/privacy.html
@@ -97,7 +97,7 @@ for (var i = 0; i < titlearray.length; i++) {
             <div class="section-tittle"> <h3>What data breach procedures we have in place</h3></div>
             <div class="section-tittle">             <h3>What third parties we receive data from</h3></div>
             <div class="section-tittle">             <h3>What automated decision making and/or profiling we do with user data</h3></div>
-            <div class="section-tittle">             <h3>Industry regulatory disclosure requirements</h3></div>
+            <div class="section-tittle">             <h3>Industry regulatory disclosure requirements</h3>
         </div>
         </section>
 
