--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
                 <h1 class="text-right pt-20 pr-20">Our Services</h1>
             </div>
             <div class="cut-corner">
-                <h1 class="text-light font-weight-bold" style="font-size:7vw;">What We Provide</h1>
+                <h1 class="text-light font-weight-bold" style="font-size:6vw;">What We Provide</h1>
             </div>
         </section>
       
@@ -159,14 +159,10 @@
                         <div class="about-right-img">
                             <div class="section-title">
 
-                                <h2>Do You Have Any Questions? Read Our FAQs Section and Feel Free to Ask</h2>
+                                <h2 class="line-1point2">Do You Have Any Questions? Read Our FAQs Section and Feel Free to Ask</h2>
                             </div>
                             <img src="assets/img/trinity/Pic16.png" alt="">
                         </div>
-                        <!--  <div class="img-cap">
-                            <span>20</span>
-                            <p>Years of experience</p>
-                        </div> -->
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-6 col-md-10 ml-4 align-self-center">
@@ -174,7 +170,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-lg-12 col-md-10">
                                 <div class="mb-35">
-                                    <h4 id="firstToggle" onclick="showhide(mydiv)" class="mb-35 pbc-25 font-25 font-17">How To Get GeM Registration?  <i class="fas fa-chevron-down"></i></h4>
+                                    <h4 id="firstToggle" onclick="showhide(mydiv)" class="mb-35 pbc-25 font-25 font-17" >How To Get GeM Registration?  <i class="fas fa-chevron-down"></i></h4>
                                     <div id="firstShow" class="custom-hidden card pl-4">
                                         <p>
                                         <h4>In order to obtain GeM Registration you must have following below documents
