--- a/terms.html
+++ b/terms.html
@@ -94,7 +94,7 @@ for (var i = 0; i < titlearray.length; i++) {
 
 <p>We have the right to cancel our services for our customers if they are not cooperating with us.</p>
 
-<p> We will provide refunds only in few cases and all gateway charges and our consultation fee will be not refunded and deducted from the paid amount. It will take upto 15 days to start or initiate your refund.</p>
+<p>cWe will provide refunds only in few cases and all gateway charges and our consultation fee will be not refunded and deducted from the paid amount. It will take upto 15 days to start or initiate your refund.
 
 
             </div>
