--- a/blog.html
+++ b/blog.html
@@ -70,9 +70,11 @@
                     <div class="col-xl-7 col-lg-7 col-md-9">
                         <div class="row justify-content-center">
                             <div class="col-xs-12 col-lg-12 col-md-10">
+                                <div class="section-tittle">
                                 <h2 class="display-3 font-weight-bold font-25">
                                     Trinity Balaji Seller Training
                                 </h2>
+                            </div>
                             </div>
                         </div>
                         <p>
@@ -109,9 +111,11 @@
                     <div class="col-xl-7 col-lg-7 col-md-9">
                         <div class="row justify-content-center">
                             <div class="col-xs-12 col-lg-12 col-md-10">
+                                <div class="section-tittle">
                                 <h2 class="display-4 font-weight-bold text-center mb-30 font-25">
                                     Get Training For Trinity Balaji Portal From
                                     Trinity Balaji Portal Experts
+                                </div>
                                 </h2>
                             </div>
                         </div>
@@ -135,10 +139,12 @@
                     <div class="col-xl-6 col-lg-7 col-md-9">
                         <div class="row justify-content-center">
                             <div class="col-xs-12 col-lg-12 col-md-10">
+                                <div class="section-tittle">
                                 <h2 class="display-4 font-weight-bold mb-30 font-25">
                                     What is Government
                                     e-Marketplace?
                                 </h2>
+                            </div>
                             </div>
                         </div>
                         <p>
@@ -176,10 +182,11 @@
 
                     </div>
                     <div class="col-xl-6 col-lg-7 col-md-9 align-self-center">
-                        <h2 class="display-4 font-weight-bold text-center mb-30 font-25">
+                        <div class="section-title">
+                        <h1 class="display-4 font-weight-bold text-center mb-30 font-25">
                             Trinity Seller Training With Trinity Experts
-                        </h2>
-
+                        </h1>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -189,7 +196,8 @@
 
         <section class="about-low-area section-padding40">
             <div class="container">
-                <h2 class="text-center display-4 font-weight-bold mb-30 font-30">Why Learn About Government e-Marketplace?</h2>
+                <div class="section-title">
+                <h1 class="text-center display-4 font-weight-bold mb-30 font-30">Why Learn About Government e-Marketplace?</h1></div>
                 <div class="row justify-content-between">
 
                     <div class="col-xl-6 col-lg-6 col-md-10">
@@ -234,7 +242,8 @@
 
         <section class="about-low-area section-padding40">
             <div class="container">
-                <h2 class="text-center display-4 font-weight-bold mb-30 font-30">Why Learn About Government e-Marketplace?</h2>
+                <div class="section-title">
+                <h1 class="text-center display-4 font-weight-bold mb-30 font-30">Why Learn About Government e-Marketplace?</h1></div>
                 <div class="row">
 
                     <div class="col-xl-4 col-lg-4 col-md-9">
@@ -272,13 +281,15 @@
             <div class="container">
                 <div class="text-center">
                     <h4 class="orangetextcolor  pt-40 ">TRINITY PORTAL TRAINING FOR SELLERS</h4>
+                    <div class="section-title">
                     <h1 class="font-weight-bold">How To Learn About Trinity Seller Training</h1>
                 </div>
+                </div>
                 <div class="row">
-                    <div class="col-xl-6 col-lg-7 col-md-9 align-self-center">
-                        <h2 class="display-3 font-weight-bold text-center mb-30 font-35">
+                    <div class="col-xl-6 col-lg-7 col-md-9 align-self-center section-title">
+                        <h1 class="display-3 font-weight-bold text-center mb-30 font-35">
                             Get Complete Training For Trinity Sellers
-                        </h2>
+                        </h1>
 
                     </div>
                     <div class="col-xl-5 col-lg-5 col-md-8 offset-md-1 offset-sm-1 pt-10">
@@ -314,9 +325,9 @@
                                     We are known for our training sessions. Our experts are training people regularly.
                                     GeM Portal Seller training for those who want to grow their business on gem.
                                     <br /><br />
-                                    <u class="orangeunderline">EXPLORE OUR SERVICES
+                                    <div class="section-tittle"><h1><u class="orangeunderline font-17">EXPLORE OUR SERVICES
                                         READ OUR BLOG
-                                        MEET OUR TEAM</u>
+                                        MEET OUR TEAM</u></h1></div>
                                 </p>
                             </div>
                             <div class="row p-2">
@@ -477,10 +488,10 @@
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-10 align-self-center">
-
+<div class="section-tittle">
                         <h2 class="display-4 font-weight-bold font-25">Live GeM Seller Training Sessions
                         </h2>
-
+                    </div>
                         <p>
                             We have experts who knows how to make someone expert in something, They know how to teach
                             and explain anything to anyone is such a way that they can easily grab it.
@@ -501,11 +512,11 @@
             <div class="container">
                 <div class="row ">
                     <div class="col-xl-6 col-lg-6 col-md-10 align-self-center">
-
+<div class="section-title">
                         <h1 class="font-weight-bold">
                             Personal GeM Seller Training For You
                         </h1>
-
+                    </div>
                         <p>
                             We training our clients or students personally, what you have paid does not matter because
                             our priority is to give you quality service.
@@ -540,11 +551,11 @@
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-10 align-self-center">
-
+<div class="section-title">
                         <h1 class="font-weight-bold">
                             Virtual GeM Seller Training Sessions
                         </h1>
-
+                    </div>
                         <p>
                             We provide complete personalized and virtual gem portal training to our clients. Our team of
                             experts is always busy is taking training sessions for our clients.
@@ -562,11 +573,11 @@
             <div class="container">
                 <div class="row ">
                     <div class="col-xl-6 col-lg-6 col-md-10 align-self-center">
-
-                        <h1 class="font-weight-bold">
+<div class="section-tittle">
+                        <h2 class="font-weight-bold">
                             What About Support After Training Session
-                        </h1>
-
+                        </h2>
+                    </div>
                         <p>
                             Everyone asks us the same question, what about support services after the training sessions?
                             And we are always happy to answer this question that we provide “lifetime” support with our
@@ -603,10 +614,11 @@
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-10">
-
+<div class="section-title">
                         <h1 class="font-weight-bold text-center">
                             Our Mission
                         </h1>
+                    </div>  
 
                         <p>
                             Our mission is Straight and Simple. We want to provide quality services to our clients. As
@@ -626,9 +638,11 @@
             <div class="container">
                 <div class="row justify-content-center mb-5">
                     <div class="col-xs-12 col-lg-12 col-md-10">
+                        <div class="section-title">
                         <h1 class="text-center display-4 font-weight-bold font-30">
                             Always Remember These Points
                         </h1>
+                    </div>
                     </div>
                 </div>
                 <div class="row mb-25">
@@ -676,7 +690,7 @@
 
         <section>
             <div class="container">
-                <h1 class="text-center font-weight-bold display-3 pt-5 font-35">What We Have Done Till Now!
+                <h1 class="text-center font-weight-bold display-3 pt-5 font-35 darkbluecolor">What We Have Done Till Now!
                 </h1>
                 <div class="row">
                     <div class="col-md-3 text-center ">
@@ -737,7 +751,7 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-10">
 
-                        <h1 class="font-weight-bold text-center display-1 font-40">
+                        <h1 class="font-weight-bold text-center display-1 font-40 darkbluecolor">
                             Meet<br /> Our Team
                         </h1>
 
@@ -835,7 +849,7 @@
                 <div class="row ">
                     <div class="col-xl-6 col-lg-6 col-md-10 align-self-center">
 
-                        <h1 class="font-weight-bold display-1 mb-3 font-40">
+                        <h1 class="font-weight-bold display-1 mb-3 font-40 darkbluecolor">
                             Let's Connect
                         </h1>
 
@@ -870,11 +884,13 @@
 
                 <div class="row">
                     <div class="col-xs-12 col-lg-12 col-md-10">
-                        <h1 class="text-center font-weight-bold display-4 font-25">
+                        <div class="section-title">
+                        <h1 class="text-center font-weight-bold font-25">
                             We have an amazing services.
                             <br />
                             Give it a try today!
                         </h1>
+                    </div>
                     </div>
                 </div>
 
@@ -912,9 +928,12 @@
 
                     </div>
                     <div class="col-xl-6 col-lg-7 col-md-9  center-item-sm ">
-                        <h2 class="display-4 font-weight-bold text-center mb-30 font-30">
+                        <div class="section-title">
+
+                        <h1 class="display-4 font-weight-bold text-center mb-30 font-30">
                             More Contacts
-                        </h2>
+                        </h1>
+                    </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="card border-0">
