--- a/contact.html
+++ b/contact.html
@@ -187,6 +187,23 @@
         </div>
     </section>
 
+    <section >
+        <div class="container p-5">
+        <div class="row justify-content-around">
+
+            <div class="col-md-4">
+              <u>  <a href="terms.html">TERMS & CONDITIONS</a></u>
+            </div>
+            <div class="col-md-4">
+             <u>   <a href="privacy.html">PRIVACY POLICY</a></u>
+            </div>
+            <div class="col-md-4">
+             <u>   <a href="refund.html">REFUND POLICY</a></u>
+            </div>
+        </div>
+    </div> 
+    </section>
+
 </main>
 <div id="footer"></div>
 <!-- Scroll Up -->
